<resources>
    <string name="app_name">TabataTimer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_exercise_button">ADD NEW EXERCISE</string>
    <string name="title_add_new_exercise">ADD NEW EXERCISE</string>
    <string name="start_button">START</string>
    <string name="hint_entering_working_time">Enter working time for an exercise in seconds :</string>
    <string name="hint_entering_rest_time">Enter rest time after exercise in seconds :</string>
    <string name="hint_entering_pause_time">Enter pause time after set in seconds :</string>
    <string name="hint_entering_number_of_sets">Enter the number of sets :  (times you want to repeat all exercises)</string>
    <string name="button_set_default">Set Default</string>
    <string name="button_start_training">START TRAINING</string>
    <string name="done_and_working_sets">X/Y</string>
    <string name="temp_exercise">Exercise xy</string>
    <string name="temp_time">40 sec</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="start_from_beginning">START from BEGINNING</string>
    <string name="see_and_add_exercises">SEE AND ADD EXERCISES</string>
    <string name="number_of_exercises_for_training">Number of EXERCISES for TRAINING</string>
    <string name="next">NEXT</string>
    <string name="stopwatch_image">Stopwatch image</string>
</resources>
