<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity"
    android:background="#7090ff"
    android:orientation="vertical">

    <LinearLayout android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNumberOfSets"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/done_and_working_sets"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button android:layout_height="40dp"
            android:layout_width="40dp"
            android:id="@+id/buttonMusicOnOff"
            android:background="@drawable/ic_volume_up_black_24dp"
            android:onClick="buttonClickVolumeChange"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView android:id="@+id/textViewCurrentExercise"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/temp_exercise"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@android:color/black" />

    <TextView android:id="@+id/textViewExerciseTime"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/temp_time"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@android:color/black" />

    <Button android:id="@+id/buttonStart"
        android:layout_height="60dp"
        android:layout_width="250dp"
        android:background="@drawable/rounded_button"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/start"
        android:onClick="buttonClickStart"/>

    <Button android:id="@+id/buttonPause"
        android:layout_height="60dp"
        android:layout_width="250dp"
        android:background="@drawable/rounded_button"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/pause"
        android:onClick="buttonClickPause"/>

    <Button android:id="@+id/buttonStartFromBeginning"
        android:layout_height="60dp"
        android:layout_width="250dp"
        android:background="@drawable/rounded_button"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/start_from_beginning"
        android:onClick="buttonClickStartFromBeginning"/>

</LinearLayout>